file(GLOB s1c_sources *.h *.cpp)
list(REMOVE_ITEM s1c_sources ${CMAKE_CURRENT_SOURCE_DIR}/s1c.cpp)
list(REMOVE_ITEM s1c_sources ${CMAKE_CURRENT_SOURCE_DIR}/s1c_latex.cpp)
ADD_EXECUTABLE(s1c ${s1c_sources} s1c.cpp)
target_link_libraries(s1c codegen splitter optimize)
ADD_EXECUTABLE(s1c_latex ${s1c_sources} s1c_latex.cpp)
target_link_libraries(s1c_latex codegen splitter optimize)
