file(GLOB s1c_sources *.h *.cpp)
ADD_EXECUTABLE(s1c ${s1c_sources})
s1_get_boost_link_libs(_S1C_LINK_BOOST filesystem locale iostreams program_options)
target_link_libraries(s1c s1 ${_S1C_LINK_BOOST})
set_target_properties(s1c PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
